# rv-1126-av-sdk

./: CMakeLists.txt  toolchain-rv1126.cmake
app/: main.c
include/: pipeline.h
src/: audio_capture.c  audio_capture.h  audio_encoder.c  audio_encoder.h  muxer.c  muxer.h  pipeline.c  safe_queue.c  safe_queue.h  video_capture.c  video_capture.h  video_encoder.c  video_encoder.h
